Further avoid content shifting
Table card default height and hide tracker before loading the logic

--- a/style.css
+++ b/style.css
@@ -651,3 +651,7 @@ header {
 .grid-cols-3 > div.ingress-card {
   min-height: 110px;
 }
+
+#table-card {
+  min-height: 480px;
+}
